src/objects/diTexasPermitWithAcreage__c.object
<CustomObject>
    <description>Drilling Info Texas Permits with Acreage</description>
    <fields>
        <fullName>API10__c</fullName>
        <label>API10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>countyName__c</fullName>
        <label>County Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leaseName__c</fullName>
        <label>Lease Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>permitNumber__c</fullName>
        <label>Permit Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>permittedAcres__c</fullName>
        <label>Permitted Acres</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrcDistrict__c</fullName>
        <label>RRC District</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrcLeaseNumber__c</fullName>
        <label>RRC Lease Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stateName__c</fullName>
        <label>State Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Texas Permit with Acreage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DITP-{0000000000}</displayFormat>
        <label>DI Texas Permit with Acreage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Texas Permits with Acreage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>